name:                unknot
version:             0.1.0.0
synopsis:            Circle API client
description:         Please see README.md
homepage:            https://github.com/dmarticus/unknot#readme
license:             BSD3
license-file:        LICENSE
author:              Dylan Martin
maintainer:          dmarticus@gmail.com
copyright:           2022 Dylan Martin
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Unknot
                       Unknot.Client
                       Unknot.Types
  build-depends:       base                 >= 4.7 && < 5
                     , aeson                >= 0.11.1 && <1.6
                     , bytestring           >= 0.10.0 && <0.11
                     , containers
                     , country
                     , http-client          >= 0.7.6 && <0.7.9
                     , http-client-tls      >= 0.3 && <0.3.6
                     , http-types           >= 0.8 && <0.13
                     , pcre-heavy
                     , refined
                     , template-haskell
                     , text                 >= 0.11 && <1.3
                     , time
                     , uuid
                     , vector               >= 0.10.9 && <0.13
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options: -Wall -Werror -fwarn-unused-binds -fwarn-unused-imports

test-suite test
  ghc-options: -Wall -Werror -fwarn-unused-binds -fwarn-unused-imports
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: test
  build-depends:       base,
                       unknot,
                       hspec                >= 1.8 && <2.8,
                       hspec-expectations,
                       text,
                       time,
                       uuid,
                       http-client          >= 0.7.6 && <0.7.9,
                       http-client-tls      >= 0.3 && <0.3.6,
                       safe >= 0.3 && <0.4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dmarticus/unknot
